# ScribeKit

./: README.md
local-audio/: README.md  pyproject.toml
local-audio/audioai/: audio.py  cli.py  config.py  doctor.py  models.py  schemas.py  transcribe.py  utils.py
local-audio/audioai/backends/: __init__.py  base.py  whisper_cpp.py
local-audio/audioai/outputs/: __init__.py  writers.py
local-audio/tests/: test_cli.py
