[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "audioai"
version = "0.1.0"
description = "Local Audio Intelligence Toolkit"
authors = [
    { name = "Jules", email = "jules@example.com" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.scripts]
audioai = "audioai.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.10",
]
